# pokemon

./: README.md  Test_Notebook.ipynb  getNewMoves.py  getParner.py  pokemon_effectiveness.py  pyproject.toml
