[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = ""
authors = ["Bas Dorsman <superbas1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pokebase = "^1.3.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
spyder-kernels = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
